Added second Project (Random Meme Generator)

--- a/index.html
+++ b/index.html
@@ -27,13 +27,25 @@
 
           <!-- Project 1 -->
           <section class="project-item">
-            <img src="images/react_project.jpg" alt="Web interface with appointments created using react.js">
+            <a href="https://github.com/FilipSzkarlat/React-Interface" target="_blank">
+              <img src="images/react_project.jpg" alt="Web interface with appointments created using react.js">
+            </a>
             <h3>Web interface/ React project</h3>
             <p>Passing data to a component, usign the useState hook, conditional classes and toggle items by passing the state to a sub-component and using values to hide or show sub-components. Deleting records, searching with a filtered array, setting up a sort, adding new appointments and more.</p>
             <a class="btn" href="https://github.com/FilipSzkarlat/React-Interface" target="_blank">GitHub repo</a>
           </section>
 
           <!-- Project 2 -->
+          <section class="project-item">
+            <a href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">
+              <img src="images/Random Meme Generator.jpg" alt="Coming soon." height = 200>
+            </a>
+            <h3>Random Meme Generator</h3>
+            <p>In the project, based on various data collections such as image sets, jokes, quotes, and riddles, JavaScript and DOM mechanisms are used to generate random elements. For example, this could involve randomly selecting images and dynamically inserting them into the page, displaying jokes and quotes in appropriate sections.</p>
+            <a class="btn" href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">Random Meme Generator</a>
+          </section>
+
+          <!-- Project 3 -->
           <section class="project-item">
             <img src="images/coming_soon.jpg" alt="Coming soon.">
             <h3>New project</h3>
