adding Single price grid component project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 
           <!-- Project 1 -->
           <section class="project-item">
+            <a href="https://filipszkarlat.github.io/single-price-grid-component-master/" target="_blank">
+              <img src="images/single-price-grid-component.jpg" alt="Single price grid component. Frontend Mentor challenge.">
+            </a>
+            <h3>Single price grid component / Frontend Mentor challenge</h3>
+            <p>I created a simple single price grid component using HTML and CSS. The project aimed to enhance my understanding of frontend technologies and build a visually appealing and responsive component.</p>
+            <a class="btn" href="https://filipszkarlat.github.io/single-price-grid-component-master/" target="_blank">Open in browser</a>
+          </section>
+
+          <!-- Project 2 -->
+          <section class="project-item">
             <a href="https://github.com/FilipSzkarlat/React-Interface" target="_blank">
               <img src="images/react_project.jpg" alt="Web interface with appointments created using react.js">
             </a>
@@ -35,7 +45,7 @@
             <a class="btn" href="https://github.com/FilipSzkarlat/React-Interface" target="_blank">GitHub repo</a>
           </section>
 
-          <!-- Project 2 -->
+          <!-- Project 3 -->
           <section class="project-item">
             <a href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">
               <img src="images/Random Meme Generator.jpg" alt="Coming soon." height = 200>
@@ -45,7 +55,7 @@
             <a class="btn" href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">Random Meme Generator</a>
           </section>
 
-          <!-- Project 3 -->
+          <!-- Project 4 -->
           <section class="project-item">
             <img src="images/coming_soon.jpg" alt="Coming soon.">
             <h3>New project</h3>
