adding new project 'Testimonials grid section'

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
           <h2>Featured Projects</h2>
           <p>View selected projects below. More information can be found at my <a href="https://github.com/FilipSzkarlat" target="_blank">GitHub</a> account.</p>
 
+          <!-- Project 4 -->
+          <section class="project-item">
+            <a href="https://filipszkarlat.github.io/testimonials-grid-section/" target="_blank">
+              <img src="images/testimonials grid section.jpg" alt="Testimonial grid section project." height="200px">
+            </a>
+            <h3>Testimonial grid section</h3>
+            <p>The "Testimonials Grid Section" project is a single-page frontend project created using HTML and CSS, with a primary focus on the implementation of Flexbox for layout design. The objective of this project was to build a visually appealing and responsive section showcasing testimonials from satisfied users.</p>
+            <a class="btn" href="https://filipszkarlat.github.io/testimonials-grid-section/" target="_blank">Open in browser</a>
+          </section>
+
           <!-- Project 1 -->
           <section class="project-item">
             <a href="https://filipszkarlat.github.io/single-price-grid-component-master/" target="_blank">
@@ -48,19 +58,11 @@
           <!-- Project 3 -->
           <section class="project-item">
             <a href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">
-              <img src="images/Random Meme Generator.jpg" alt="Coming soon." height = 200>
+              <img src="images/Random Meme Generator.jpg" alt="Random meme generator." height = 200>
             </a>
             <h3>Random Meme Generator</h3>
             <p>In the project, based on various data collections such as image sets, jokes, quotes, and riddles, JavaScript and DOM mechanisms are used to generate random elements. For example, this could involve randomly selecting images and dynamically inserting them into the page, displaying jokes and quotes in appropriate sections.</p>
             <a class="btn" href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">Random Meme Generator</a>
-          </section>
-
-          <!-- Project 4 -->
-          <section class="project-item">
-            <img src="images/coming_soon.jpg" alt="Coming soon.">
-            <h3>New project</h3>
-            <p>I am constantly working and new projects will be appearing soon.</p>
-            <a class="btn" href="#" ">Coming soon</a>
           </section>
 
         </div>
