Two new projects: Holy grail and adRespect

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filip Szkarłat, Junior Front-end Developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <main>
@@ -15,7 +18,15 @@
           <h1>Filip Szkarłat Szczepaniak</h1>
           <h2>Junior Front-end Developer</h2>
 
-          <p>I am an ambitious and determined candidate who strives to develop their programming skills. I have a vast knowledge of programming languages such as Python, HTML, and CSS, as well as the ability to work in a team. I am motivated to learn new technologies and tools. I also possess a strong passion for programming. I aim to begin my career as a junior Front-end developer to gain experience and grow in this field</p>
+          <p>
+            I am an ambitious and determined candidate who strives to develop
+            their programming skills. I have a vast knowledge of programming
+            languages such as Python, HTML, and CSS, as well as the ability to
+            work in a team. I am motivated to learn new technologies and tools.
+            I also possess a strong passion for programming. I aim to begin my
+            career as a junior Front-end developer to gain experience and grow
+            in this field
+          </p>
         </div>
       </header>
 
@@ -23,48 +34,177 @@
       <section class="projects">
         <div class="content-wrap divider">
           <h2>Featured Projects</h2>
-          <p>View selected projects below. More information can be found at my <a href="https://github.com/FilipSzkarlat" target="_blank">GitHub</a> account.</p>
+          <p>
+            View selected projects below. More information can be found at my
+            <a href="https://github.com/FilipSzkarlat" target="_blank"
+              >GitHub</a
+            >
+            account.
+          </p>
+
+          <!-- Project 6 -->
+          <section class="project-item">
+            <a
+              href="https://filipszkarlat.github.io/project-for-adRespect/"
+              target="_blank"
+            >
+              <img
+                src="images/adRespect.jpg"
+                alt="Project for adRespect"
+                height="200px"
+              />
+            </a>
+            <h3>Project for adRespect</h3>
+            <p>
+              Primarily built using Bootstrap and the Masonry library. The
+              primary goal of this project was to develop a responsive and
+              grid-based layout that showcases content in an organized and
+              visually engaging manner.
+            </p>
+            <a
+              class="btn"
+              href="https://filipszkarlat.github.io/project-for-adRespect/"
+              target="_blank"
+              >Open in browser</a
+            >
+          </section>
+
+          <!-- Project 5 -->
+          <section class="project-item">
+            <a
+              href="https://filipszkarlat.github.io/holy-grail-css-layout/"
+              target="_blank"
+            >
+              <img
+                src="images/holy-grail.jpg"
+                alt="Holy grail css layout"
+                height="200px"
+              />
+            </a>
+            <h3>Holy grail css layout</h3>
+            <p>
+              As I progress in my frontend development journey, I am excited to
+              further explore the capabilities of CSS Grid and other innovative
+              tools that empower me to craft visually stunning and responsive
+              web layouts.
+            </p>
+            <a
+              class="btn"
+              href="https://filipszkarlat.github.io/holy-grail-css-layout/"
+              target="_blank"
+              >Open in browser</a
+            >
+          </section>
 
           <!-- Project 4 -->
           <section class="project-item">
-            <a href="https://filipszkarlat.github.io/testimonials-grid-section/" target="_blank">
-              <img src="images/testimonials grid section.jpg" alt="Testimonial grid section project." height="200px">
+            <a
+              href="https://filipszkarlat.github.io/testimonials-grid-section/"
+              target="_blank"
+            >
+              <img
+                src="images/testimonials grid section.jpg"
+                alt="Testimonial grid section project."
+                height="200px"
+              />
             </a>
             <h3>Testimonial grid section</h3>
-            <p>The "Testimonials Grid Section" project is a single-page frontend project created using HTML and CSS, with a primary focus on the implementation of Flexbox for layout design. The objective of this project was to build a visually appealing and responsive section showcasing testimonials from satisfied users.</p>
-            <a class="btn" href="https://filipszkarlat.github.io/testimonials-grid-section/" target="_blank">Open in browser</a>
+            <p>
+              The "Testimonials Grid Section" project is a single-page frontend
+              project created using HTML and CSS, with a primary focus on the
+              implementation of Flexbox for layout design. The objective of this
+              project was to build a visually appealing and responsive section
+              showcasing testimonials from satisfied users.
+            </p>
+            <a
+              class="btn"
+              href="https://filipszkarlat.github.io/testimonials-grid-section/"
+              target="_blank"
+              >Open in browser</a
+            >
           </section>
 
           <!-- Project 1 -->
           <section class="project-item">
-            <a href="https://filipszkarlat.github.io/single-price-grid-component-master/" target="_blank">
-              <img src="images/single-price-grid-component.jpg" alt="Single price grid component. Frontend Mentor challenge.">
+            <a
+              href="https://filipszkarlat.github.io/single-price-grid-component-master/"
+              target="_blank"
+            >
+              <img
+                src="images/single-price-grid-component.jpg"
+                alt="Single price grid component. Frontend Mentor challenge."
+              />
             </a>
             <h3>Single price grid component / Frontend Mentor challenge</h3>
-            <p>I created a simple single price grid component using HTML and CSS. The project aimed to enhance my understanding of frontend technologies and build a visually appealing and responsive component.</p>
-            <a class="btn" href="https://filipszkarlat.github.io/single-price-grid-component-master/" target="_blank">Open in browser</a>
+            <p>
+              I created a simple single price grid component using HTML and CSS.
+              The project aimed to enhance my understanding of frontend
+              technologies and build a visually appealing and responsive
+              component.
+            </p>
+            <a
+              class="btn"
+              href="https://filipszkarlat.github.io/single-price-grid-component-master/"
+              target="_blank"
+              >Open in browser</a
+            >
           </section>
 
           <!-- Project 2 -->
           <section class="project-item">
-            <a href="https://github.com/FilipSzkarlat/React-Interface" target="_blank">
-              <img src="images/react_project.jpg" alt="Web interface with appointments created using react.js">
+            <a
+              href="https://github.com/FilipSzkarlat/React-Interface"
+              target="_blank"
+            >
+              <img
+                src="images/react_project.jpg"
+                alt="Web interface with appointments created using react.js"
+              />
             </a>
             <h3>Web interface/ React project</h3>
-            <p>Passing data to a component, usign the useState hook, conditional classes and toggle items by passing the state to a sub-component and using values to hide or show sub-components. Deleting records, searching with a filtered array, setting up a sort, adding new appointments and more.</p>
-            <a class="btn" href="https://github.com/FilipSzkarlat/React-Interface" target="_blank">GitHub repo</a>
+            <p>
+              Passing data to a component, usign the useState hook, conditional
+              classes and toggle items by passing the state to a sub-component
+              and using values to hide or show sub-components. Deleting records,
+              searching with a filtered array, setting up a sort, adding new
+              appointments and more.
+            </p>
+            <a
+              class="btn"
+              href="https://github.com/FilipSzkarlat/React-Interface"
+              target="_blank"
+              >GitHub repo</a
+            >
           </section>
 
           <!-- Project 3 -->
           <section class="project-item">
-            <a href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">
-              <img src="images/Random Meme Generator.jpg" alt="Random meme generator." height = 200>
+            <a
+              href="https://filipszkarlat.github.io/Random-Meme-Generator/"
+              target="_blank"
+            >
+              <img
+                src="images/Random Meme Generator.jpg"
+                alt="Random meme generator."
+                height="200"
+              />
             </a>
             <h3>Random Meme Generator</h3>
-            <p>In the project, based on various data collections such as image sets, jokes, quotes, and riddles, JavaScript and DOM mechanisms are used to generate random elements. For example, this could involve randomly selecting images and dynamically inserting them into the page, displaying jokes and quotes in appropriate sections.</p>
-            <a class="btn" href="https://filipszkarlat.github.io/Random-Meme-Generator/" target="_blank">Random Meme Generator</a>
+            <p>
+              In the project, based on various data collections such as image
+              sets, jokes, quotes, and riddles, JavaScript and DOM mechanisms
+              are used to generate random elements. For example, this could
+              involve randomly selecting images and dynamically inserting them
+              into the page, displaying jokes and quotes in appropriate
+              sections.
+            </p>
+            <a
+              class="btn"
+              href="https://filipszkarlat.github.io/Random-Meme-Generator/"
+              target="_blank"
+              >Random Meme Generator</a
+            >
           </section>
-
         </div>
       </section>
 
@@ -72,19 +212,29 @@
       <section class="work-experience">
         <div class="content-wrap item-details divider">
           <h2>Work Experience</h2>
-          <p>See my profile on <a href="https://www.linkedin.com/in/filip-szkarłat-196895223/" target="_blank">LinkedIn</a>.</p>
+          <p>
+            See my profile on
+            <a
+              href="https://www.linkedin.com/in/filip-szkarłat-196895223/"
+              target="_blank"
+              >LinkedIn</a
+            >.
+          </p>
 
           <!-- Job 1 -->
           <section class="job-item">
             <div class="job-details">
-              <h3>Process Controller </h3>
+              <h3>Process Controller</h3>
               <p>CERI INTERNATIONAL</p>
               <p>February 2022-Present</p>
             </div>
             <div class="job-summary">
-              <p>Control of banking processes operating on production.
-                Implementing and checking processes ready for operation in production. Working in BluePrism, supported by Qlick, Outlook, MS Office, Confluence and others.
-                </p>
+              <p>
+                Control of banking processes operating on production.
+                Implementing and checking processes ready for operation in
+                production. Working in BluePrism, supported by Qlick, Outlook,
+                MS Office, Confluence and others.
+              </p>
             </div>
           </section>
 
@@ -96,10 +246,12 @@
               <p>May 2021 - July 2021</p>
             </div>
             <div class="job-summary">
-              <p>Remote testing of websites, web applications on the WordPress platform and database management.
-                Onboarding new interns to the Wordpress platform.</p>
+              <p>
+                Remote testing of websites, web applications on the WordPress
+                platform and database management. Onboarding new interns to the
+                Wordpress platform.
+              </p>
             </div>
-
           </section>
         </div>
       </section>
@@ -111,8 +263,11 @@
 
           <section>
             <h3>Software Development Academy - Gdansk, Poland</h3>
-            <p>Junior Python Development  2020</p>
-            <p>11 month weekend program covering HTML, CSS, Django, MySQL, GitHub and JavaScript.</p>
+            <p>Junior Python Development 2020</p>
+            <p>
+              11 month weekend program covering HTML, CSS, Django, MySQL, GitHub
+              and JavaScript.
+            </p>
           </section>
 
           <section>
@@ -129,9 +284,23 @@
 
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul class="contact-list">
-            <li><a href="mailto:filip.szkarlat@gmail.com" target="_blank">filip.szkarlat@gmail.com</a></li>
-            <li><a href="https://github.com/FilipSzkarlat" target="_blank">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/filip-szkarłat-196895223/" target="_blank">LinkedIn</a></li>
+            <li>
+              <a href="mailto:filip.szkarlat@gmail.com" target="_blank"
+                >filip.szkarlat@gmail.com</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/FilipSzkarlat" target="_blank"
+                >GitHub</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/filip-szkarłat-196895223/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
           </ul>
         </div>
       </footer>
