web animation in header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header>
         <div class="content-wrap">
           <h1>Filip Szkarłat Szczepaniak</h1>
-          <h2>Junior Front-end Developer</h2>
+          <h2>Front-end Developer</h2>
 
           <p>
             I am an ambitious and determined candidate who strives to develop
@@ -27,6 +27,44 @@
             career as a junior Front-end developer to gain experience and grow
             in this field
           </p>
+
+          <div class="moving-content">
+            <div>
+              <div id="html">HTML</div>
+            </div>
+
+            <div>
+              <div id="css">CSS</div>
+            </div>
+
+            <div>
+              <div id="javascript">JavaScript</div>
+            </div>
+
+            <div>
+              <div id="bootstrap">Bootstrap</div>
+            </div>
+
+            <div>
+              <div id="css-flexbox">CSS Flexbox</div>
+            </div>
+
+            <div>
+              <div id="web-development">Web Development</div>
+            </div>
+
+            <div>
+              <div id="css-grid">CSS Grid</div>
+            </div>
+
+            <div>
+              <div id="react">React</div>
+            </div>
+
+            <div>
+              <div id="scss">SCSS</div>
+            </div>
+          </div>
         </div>
       </header>
 
