update for title and animation in header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filip Szkarłat, Junior Front-end Developer</title>
+    <title>Filip Szkarłat, Front-end Developer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap"
       rel="stylesheet"
@@ -29,23 +29,25 @@
           </p>
 
           <div class="moving-content">
-            <div id="html">HTML</div>
+            <div>HTML</div>
 
-            <div id="css">CSS</div>
+            <div>CSS</div>
 
-            <div id="javascript">JavaScript</div>
+            <div>JavaScript</div>
 
-            <div id="bootstrap">Bootstrap</div>
+            <div>Bootstrap</div>
 
-            <div id="css-flexbox">CSS Flexbox</div>
+            <div>CSS Flexbox</div>
 
-            <div id="web-development">Web Development</div>
+            <div>Web Development</div>
 
-            <div id="css-grid">CSS Grid</div>
+            <div>CSS Grid</div>
 
-            <div id="react">React</div>
+            <div>React</div>
 
-            <div id="scss">SCSS</div>
+            <div>SCSS</div>
+
+            <div>GitHub</div>
           </div>
         </div>
       </header>
